// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModelMatrixLink /> should render properly when a dataset has not yet been linked 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  width: 130px;
  padding-right: 16px;
}

.emotion-2 {
  position: relative;
  border: 4px solid #808080;
  padding: 1px;
  border-radius: 2px;
  margin-bottom: 8px;
  display: grid;
  grid-template: repeat(4, 1fr)/repeat(4, 1fr);
}

.emotion-3 {
  padding-bottom: 100%;
  background-color: #3b3b3b;
}

.emotion-3:not(:nth-of-type(4n)) {
  border-right: 1px solid #191919;
}

.emotion-3:not(:nth-of-type(n + 13)) {
  border-bottom: 1px solid #191919;
}

.emotion-19 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  padding-bottom: 8px;
}

.emotion-20 {
  width: 200px;
  font-style: italic;
  color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
    </div>
  </div>
  <div>
    <div
      className="emotion-19"
    >
      Confusion Matrix
    </div>
    <div
      className="emotion-20"
    >
      To view the matrix you must link the model to a dataset, add test labels, and run the "Test" or "Analyze All" actions.
    </div>
  </div>
</div>
`;

exports[`<ModelMatrixLink /> should render properly when a matrix exists 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  width: 130px;
  padding-right: 16px;
}

.emotion-2 {
  opacity: 1;
  position: relative;
  border: 4px solid #808080;
  padding: 1px;
  border-radius: 2px;
  margin-bottom: 8px;
  display: grid;
  grid-template: repeat(3, 1fr)/repeat(3, 1fr);
}

.emotion-3 {
  -webkit-filter: grayscale(0);
  filter: grayscale(0);
  padding-bottom: 100%;
  background-color: rgb(255,255,255);
  border-right: 1px solid #191919;
  border-bottom: 1px solid #191919;
}

.emotion-5 {
  -webkit-filter: grayscale(0);
  filter: grayscale(0);
  padding-bottom: 100%;
  background-color: rgb(0,39,107);
  border-right: none;
  border-bottom: 1px solid #191919;
}

.emotion-6 {
  -webkit-filter: grayscale(0);
  filter: grayscale(0);
  padding-bottom: 100%;
  background-color: rgb(53,171,255);
  border-right: 1px solid #191919;
  border-bottom: 1px solid #191919;
}

.emotion-8 {
  -webkit-filter: grayscale(0);
  filter: grayscale(0);
  padding-bottom: 100%;
  background-color: rgb(255,255,255);
  border-right: none;
  border-bottom: 1px solid #191919;
}

.emotion-9 {
  -webkit-filter: grayscale(0);
  filter: grayscale(0);
  padding-bottom: 100%;
  background-color: rgb(255,255,255);
  border-right: 1px solid #191919;
  border-bottom: none;
}

.emotion-11 {
  -webkit-filter: grayscale(0);
  filter: grayscale(0);
  padding-bottom: 100%;
  background-color: rgb(255,255,255);
  border-right: none;
  border-bottom: none;
}

.emotion-12 {
  width: 200px;
}

.emotion-13 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  padding-bottom: 16px;
}

.emotion-14 {
  padding-bottom: 8px;
}

.emotion-15 {
  color: #ffffff;
  font-family: Roboto,Avenir,"sans-serif";
}

.emotion-16 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.emotion-16,
.emotion-16:hover,
.emotion-16:visited,
.emotion-16 .noop {
  background-color: #808080;
}

.emotion-16:hover,
.emotion-16 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-16[aria-disabled=true],
.emotion-16 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-5"
      />
      <div
        className="emotion-6"
      />
      <div
        className="emotion-6"
      />
      <div
        className="emotion-8"
      />
      <div
        className="emotion-9"
      />
      <div
        className="emotion-9"
      />
      <div
        className="emotion-11"
      />
    </div>
  </div>
  <div
    className="emotion-12"
  >
    <div
      className="emotion-13"
    >
      <div
        className="emotion-14"
      >
        Confusion Matrix
      </div>
      <div>
        Accuracy:
         
        <span
          className="emotion-15"
        >
          60
          %
        </span>
      </div>
    </div>
    <a
      className="emotion-16"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/models/621bf775-89d9-1244-9596-d6df43f1ede5/matrix"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      View Matrix Details
    </a>
  </div>
</div>
`;

exports[`<ModelMatrixLink /> should render properly when a matrix is out of date 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  width: 130px;
  padding-right: 16px;
}

.emotion-2 {
  opacity: 1;
  position: relative;
  border: 4px solid #808080;
  padding: 1px;
  border-radius: 2px;
  margin-bottom: 8px;
  display: grid;
  grid-template: repeat(3, 1fr)/repeat(3, 1fr);
}

.emotion-3 {
  -webkit-filter: grayscale(1);
  filter: grayscale(1);
  padding-bottom: 100%;
  background-color: rgb(255,255,255);
  border-right: 1px solid #191919;
  border-bottom: 1px solid #191919;
}

.emotion-5 {
  -webkit-filter: grayscale(1);
  filter: grayscale(1);
  padding-bottom: 100%;
  background-color: rgb(0,39,107);
  border-right: none;
  border-bottom: 1px solid #191919;
}

.emotion-6 {
  -webkit-filter: grayscale(1);
  filter: grayscale(1);
  padding-bottom: 100%;
  background-color: rgb(53,171,255);
  border-right: 1px solid #191919;
  border-bottom: 1px solid #191919;
}

.emotion-8 {
  -webkit-filter: grayscale(1);
  filter: grayscale(1);
  padding-bottom: 100%;
  background-color: rgb(255,255,255);
  border-right: none;
  border-bottom: 1px solid #191919;
}

.emotion-9 {
  -webkit-filter: grayscale(1);
  filter: grayscale(1);
  padding-bottom: 100%;
  background-color: rgb(255,255,255);
  border-right: 1px solid #191919;
  border-bottom: none;
}

.emotion-11 {
  -webkit-filter: grayscale(1);
  filter: grayscale(1);
  padding-bottom: 100%;
  background-color: rgb(255,255,255);
  border-right: none;
  border-bottom: none;
}

.emotion-12 {
  width: 200px;
}

.emotion-13 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  padding-bottom: 16px;
}

.emotion-14 {
  padding-bottom: 8px;
}

.emotion-15 {
  width: 200px;
  font-style: italic;
  color: #808080;
  text-transform: none;
}

.emotion-16 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.emotion-16,
.emotion-16:hover,
.emotion-16:visited,
.emotion-16 .noop {
  background-color: #808080;
}

.emotion-16:hover,
.emotion-16 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-16[aria-disabled=true],
.emotion-16 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-5"
      />
      <div
        className="emotion-6"
      />
      <div
        className="emotion-6"
      />
      <div
        className="emotion-8"
      />
      <div
        className="emotion-9"
      />
      <div
        className="emotion-9"
      />
      <div
        className="emotion-11"
      />
    </div>
  </div>
  <div
    className="emotion-12"
  >
    <div
      className="emotion-13"
    >
      <div
        className="emotion-14"
      >
        Confusion Matrix
      </div>
      <div
        className="emotion-15"
      >
        The matrix is out of date 
        <br />
         and not representative.
      </div>
    </div>
    <a
      className="emotion-16"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/models/621bf775-89d9-1244-9596-d6df43f1ede5/matrix"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      View Matrix Details
    </a>
  </div>
</div>
`;

exports[`<ModelMatrixLink /> should render properly when a matrix will never exist 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  width: 130px;
  padding-right: 16px;
}

.emotion-2 {
  position: relative;
  border: 4px solid #3b3b3b;
  padding: 1px;
  border-radius: 2px;
  margin-bottom: 8px;
  display: grid;
  grid-template: repeat(4, 1fr)/repeat(4, 1fr);
}

.emotion-3 {
  padding-bottom: 100%;
  background-color: #191919;
}

.emotion-3:not(:nth-of-type(4n)) {
  border-right: 1px solid #3b3b3b;
}

.emotion-3:not(:nth-of-type(n + 13)) {
  border-bottom: 1px solid #3b3b3b;
}

.emotion-19 {
  width: 200px;
  color: #808080;
  font-style: italic;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
    </div>
  </div>
  <div
    className="emotion-19"
  >
    A confusion matrix is not available for this model type.
  </div>
</div>
`;

exports[`<ModelMatrixLink /> should render properly when the model has been applied but the matrix isn't ready 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  width: 130px;
  padding-right: 16px;
}

.emotion-2 {
  position: relative;
  border: 4px solid #808080;
  padding: 1px;
  border-radius: 2px;
  margin-bottom: 8px;
  display: grid;
  grid-template: repeat(4, 1fr)/repeat(4, 1fr);
}

.emotion-3 {
  padding-bottom: 100%;
  background-color: #3b3b3b;
}

.emotion-3:not(:nth-of-type(4n)) {
  border-right: 1px solid #191919;
}

.emotion-3:not(:nth-of-type(n + 13)) {
  border-bottom: 1px solid #191919;
}

.emotion-19 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  padding-bottom: 8px;
}

.emotion-20 {
  width: 200px;
  font-style: italic;
  color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
    </div>
  </div>
  <div>
    <div
      className="emotion-19"
    >
      Confusion Matrix
    </div>
    <div
      className="emotion-20"
    >
      The matrix will be available once training is complete.
    </div>
  </div>
</div>
`;

exports[`<ModelMatrixLink /> should render properly when the model has not yet been applied 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  width: 130px;
  padding-right: 16px;
}

.emotion-2 {
  position: relative;
  border: 4px solid #808080;
  padding: 1px;
  border-radius: 2px;
  margin-bottom: 8px;
  display: grid;
  grid-template: repeat(4, 1fr)/repeat(4, 1fr);
}

.emotion-3 {
  padding-bottom: 100%;
  background-color: #3b3b3b;
}

.emotion-3:not(:nth-of-type(4n)) {
  border-right: 1px solid #191919;
}

.emotion-3:not(:nth-of-type(n + 13)) {
  border-bottom: 1px solid #191919;
}

.emotion-19 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  padding-bottom: 8px;
}

.emotion-20 {
  width: 200px;
  font-style: italic;
  color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
    </div>
  </div>
  <div>
    <div
      className="emotion-19"
    >
      Confusion Matrix
    </div>
    <div
      className="emotion-20"
    >
      To view the matrix you must run the "Test" or "Analyze All" actions.
    </div>
  </div>
</div>
`;

exports[`<ModelMatrixLink /> should render properly when the model has not yet been trained 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  width: 130px;
  padding-right: 16px;
}

.emotion-2 {
  position: relative;
  border: 4px solid #808080;
  padding: 1px;
  border-radius: 2px;
  margin-bottom: 8px;
  display: grid;
  grid-template: repeat(4, 1fr)/repeat(4, 1fr);
}

.emotion-3 {
  padding-bottom: 100%;
  background-color: #3b3b3b;
}

.emotion-3:not(:nth-of-type(4n)) {
  border-right: 1px solid #191919;
}

.emotion-3:not(:nth-of-type(n + 13)) {
  border-bottom: 1px solid #191919;
}

.emotion-19 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  padding-bottom: 8px;
}

.emotion-20 {
  width: 200px;
  font-style: italic;
  color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
    </div>
  </div>
  <div>
    <div
      className="emotion-19"
    >
      Confusion Matrix
    </div>
    <div
      className="emotion-20"
    >
      To view the matrix you must add test labels, and run the "Test" or "Analyze All" actions.
    </div>
  </div>
</div>
`;
